--- a/app/src/main/res/layout/welcome_activity.xml
+++ b/app/src/main/res/layout/welcome_activity.xml
@@ -4,10 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <include layout="@layout/app_bar_layout"
-        android:id="@+id/main_page_toolbar"
-        ></include>
-
-</RelativeLayout>
+    android:background="@drawable/welcome_screen"
+    tools:context=".WelcomeActivity"/>
