--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,7 +12,7 @@
         ></include>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/register_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -21,13 +21,13 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="339dp"
         android:gravity="start|top"
+        android:hint="Name ..."
         android:inputType="textMultiLine"
         android:padding="15dp"
-        android:hint="Name ..."
         android:textColor="@color/colorPrimary" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -36,13 +36,13 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="268dp"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:padding="15dp"
         android:hint="Email ..."
+        android:inputType="textMultiLine|textEmailSubject"
+        android:padding="15dp"
         android:textColor="@color/colorPrimary" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -51,13 +51,13 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="201dp"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:padding="15dp"
         android:hint="Password ..."
+        android:inputType="textMultiLine|textPassword"
+        android:padding="15dp"
         android:textColor="@color/colorPrimary" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/create_account_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
